src/test/ui/rfc-2093-infer-outlives/nested-regions.stderr
error: rustc_outlives
  --> $DIR/nested-regions.rs:4:1
   |
LL | struct Foo<'a, 'b, T> {
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: 'b: 'a
   = note: T: 'a
   = note: T: 'b

error: aborting due to previous error

